fix dropdown date element alignment

--- a/src/components/dropdown-element/dropdown-element.module.css
+++ b/src/components/dropdown-element/dropdown-element.module.css
@@ -7,6 +7,7 @@
 
 .element.date {
   flex-direction: column-reverse;
+  align-items: flex-start;
 }
 
 .element > * {
